actual fix for projects on mobile on focus maybe??? 9/12/2022

--- a/styles.css
+++ b/styles.css
@@ -594,6 +594,7 @@ nav figure {
 .project {
   margin: 128px auto;
   width: 90%;
+  border-radius: 20px;
 }
 .project__wrapper {
   position: relative;
